@@ -3,6 +3,9 @@ Version 1.6.11
        the commit dialog. (Stefan)
 - BUG: Dialogs could hang if they were closed if the
        modeless log dialog was still open. (Stefan)
+- BUG: When checking an added file in the commit dialog,
+       the parent folder wasn't checked automatically if
+       it was added too. (Stefan)
 
 Version 1.6.10
 - BUG: Updating single items from the check-for-modifications
